--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@ git clone git@github.com:nelsonov/emacs-config.git
 *.gitignore* is setup so that only certain files are included.  All other files
 will be ignored by git.
 
-***Included
+*** Included
 
  + ~.gitignore~
  + ~init.el~
@@ -19,21 +19,21 @@ will be ignored by git.
  + ~themes/*.el~ Only files ending in ~.el~ in the themes subdirectory
  + ~custom/*.el~ Only files ending in ~.el~ in the custom subdirectory 
 
-** custom subdirectory
+** The "custom" Subdirectory
 Rather than having a single, huge, monolithic ~init.el~, much of the
 configuration has been broken out into individule files.  They are called
 from ~init.el~ with a ~require~ statement:
-
 #+BEGIN_SRC emacs-lisp
 (require 'setup-something)
 #+END_SRC
 
-This tells emacs to look for a file called ~setup-something.el~ in the *load path*
-
-The ~setup-something.el~ file must end with a ~provide~ statement:
+This tells emacs to look for a file called ~setup-something.el~ in the
+*load path*.The ~setup-something.el~ file must end with a ~provide~ statement:
+#+BEGIN_SRC emacs-lisp
+(provide 'setup-something)
+#+END_SRC
 
 The ~custom~ subidrectory must be added the *load path* in ~init.el~:
-
 #+BEGIN_SRC emacs-lisp
 (add-to-list 'load-path "~/.emacs.d/custom")
 #+END_SRC
